summit/css/combined.css
/* ... */
.tokyo-landing-wrapper p {
  color: white; }

.tokyo-landing-wrapper .summit-location {
  display: block;
  font-weight: 400;
  font-size: 60px;
  color: white;
  text-align: center;
  text-transform: uppercase;
  position: relative;
  display: inline-block;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0; }
.tokyo-landing-wrapper .summit-venue {
  display: block;
  font-weight: 400;
  font-size: 16px;
  font-style: italic;
  color: white;
  text-align: center;
  text-transform: none;
  position: relative;
  display: block;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
}

.tokyo-landing-wrapper .summit-location::before {
  content: "";
  border-top: 1px solid #edf2f7;
  width: 150px;
  height: 5px;
  position: absolute;
  margin-right: 15px;
  top: 50%;
  right: 100%; }

.tokyo-landing-wrapper .summit-location::after {
  content: "";
  border-top: 1px solid #edf2f7;
  width: 150px;
  height: 5px;
  position: absolute;
  margin-left: 15px;
  top: 50%;
  left: 100%; }

@media (max-width: 767px) {
  .tokyo-landing-wrapper h1 {
    font-size: 15px; }
  .tokyo-landing-wrapper .summit-location {
    font-size: 40px; }
  .tokyo-landing-wrapper .summit-location::before {
    width: 75px; }
  .tokyo-landing-wrapper .summit-location::after {
    width: 75px; } }

@media (max-width: 480px) {
  .tokyo-landing-wrapper .summit-location::before, .tokyo-landing-wrapper .summit-location::after {
    width: 0; }
}

.summit-date {
  background: none;
  font-size: 25px;
  margin: 20px 0;
  color: white; }

.summit-date span {
  display: block;
  margin-top: 20px;
  margin-bottom: 40px;
  font-size: 16px;
  font-weight: 300;
  text-transform: uppercase; }

.landing-social {
  margin: 40px 0; }

.landing-social .social-icons {
  width: 25px;
  min-height: 25px;
  display: inline-block;
  margin: 0 10px; }

.landing-twitter {
  background: url('/summit/images/landing-twitter.png') no-repeat;
  opacity: 0.8; }

.landing-twitter:hover {
  opacity: 1; }

.landing-facebook {
  background: url('/summit/images/landing-facebook.png') no-repeat;
  opacity: 0.8; }

.landing-facebook:hover {
  opacity: 1; }

.landing-linkedin {
  background: url('/summit/images/landing-linkedin.png') no-repeat;
  opacity: 0.8; }

.landing-linkedin:hover {
  opacity: 1; }

.tokyo-landing-bottom {
  position: absolute;
  bottom: 0;
  left: 50%; }

.tokyo-landing-bottom p {
  color: white; }

.landing-footer {
  position: relative;
  left: -50%; }

.landing-footer a {
  width: 150px;
  padding: 5px 0 0;
  display: inline-block;
  background: #cf3427;
  text-align: center;
  color: white;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px; }

.landing-footer a:hover {
  background: #BD2723; }

.landing-footer a img {
  position: relative;
  margin: 0;
  padding: 0;
  max-width: 100px; }

.tokyo-landing-wrapper a i {
  color: #edf2f7; }

.tokyo-landing-wrapper a i:hover {
  color: white; }

a.current-summit-link {
  display: block;
  margin-top: 20px; }

/*End Austin Landing*/

/* Shanghai landing */
.landingintro {
  bottom: 0;
  height: auto;
  left: 0;
  margin: auto;
  position: absolute;
  right: 0;
  width: 100%;
  max-width: 1110px;
  top: 50%;
  transform: translateY(-50%);
}
.e2ma_signup_form {
  margin-top: 6rem;
  color: white;
}
.e2ma_signup_message {
  font-size: 1.2em;
  text-transform: uppercase;
  margin-bottom: 0.5em;
  font-weight: bold;
}
.e2ma_signup_form_label {
  display: none;
}
.e2ma_signup_form_element {
  display: inline-block;
}
.e2ma_signup_form_required_asterix {
  display: none;
}
#id_email {
  width: 400px;
  height: 3em;
  color: #333;
  text-align: center;
}
.e2ma_signup_form_required_footnote {
  display: none;
}
.e2ma_signup_form_button {
  border: none;
  padding: 1rem 6rem;
  text-decoration: none;
  background: #ffd602;
  color: #111111;
  font-family: sans-serif;
  font-size: 1.5rem;
  cursor: pointer;
  text-align: center;
  transition: background 250ms ease-in-out, transform 150ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  margin-top: 1rem;
  text-transform: uppercase;
  font-weight: bold;
}
/*End Shanghai landing */
/* Presentation App */
.presentation-app-header {
  border-bottom: 1px solid #CCCCCC; }
  .presentation-app-header h2 {
    text-align: left;
    margin: 20px 0px 5px 0px;
    font-size: 170%; }
  .presentation-app-header .status {
    text-transform: uppercase;
    padding-bottom: 10px;
    padding-top: 20px;
    margin-left: 325px; }

    @media (max-width: 767px) {
    .presentation-app-header .status {
      margin-left: -225px; } }

.presentation-app-body {
  padding-top: 20px;
  background-color: #F6F7F9; }

.presentation-app-login-panel {
  background-color: white;
  padding: 20px;
  max-width: 500px;
  margin: 20px auto;
  border: 1px solid #CCCCCC; }

.presentation-main-panel {
  background-color: white;
  padding: 20px;
  border: 1px solid #CCCCCC;
  margin-bottom: 30px; }
  .presentation-main-panel h2 {
    margin-top: 0px; }
  .presentation-main-panel h3 {
    font-size: 100%;
    text-transform: uppercase; }
  .presentation-main-panel form {
    margin-top: 20px; }
  .presentation-main-panel .btn:not(.btn-default) {
    color: white; }

.form-actions .btn {
  color: white; }

#BootstrapMemberLoginForm_LoginForm .btn {
  width: 100%; }

.presentation-app-login-panel {
  background-color: white;
  padding: 20px;
  max-width: 500px;
  margin: 20px auto;
  border: 1px solid #CCCCCC; }

.user-sidebar {
  background-color: white;
  padding: 20px;
  padding-bottom: 0px;
  border: 1px solid #CCCCCC;
  margin-bottom: 20px; }

.user-menu {
  margin: 0px;
  padding: 0px;
  list-style: none; }

.user-menu li a {
  display: block;
  margin: 0px -20px;
  padding: 10px 20px; }
  .user-menu li a:hover, .user-menu li a:active {
    text-decoration: none; }
  .user-menu li a.active {
    background-color: #EDF2F5;
    border-left: 3px solid #259ADA; }

.user-menu .fa {
  float: right;
  padding-top: 1.5%; }
/* ... */

